add renderer format table class